--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Chiasm component for saving SVG data.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,16 @@
   },
   "homepage": "https://github.com/chiasm-project/chiasm-svgsaver",
   "dependencies": {
-    "svgsaver": "0.0.1"
+    "chiasm-component": "^0.2.3",
+    "d3": "^3.5.6",
+    "model-js": "^0.2.4",
+    "svgsaver": "^0.1.9"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "chiasm": "^0.2.3",
+    "chiasm-layout": "^0.2.4",
+    "jsdom": "^3.1.2",
+    "mocha": "^2.3.3"
   }
 }
